@@ -1,40 +1,0 @@
-Build.PL
-ChangeLog
-MANIFEST			This list of files
-META.yml
-README
-augeas_box/etc/ssh/sshd_config
-config-model-edit
-data/MasterModel.pl
-data/MasterModel/CheckListExamples.pl
-data/MasterModel/HashIdOfValues.pl
-data/MasterModel/WarpedId.pl
-data/MasterModel/WarpedValues.pl
-data/MasterModel/SshdWithAugeas.pl
-data/MasterModel/References.pl
-data/MasterModel/X_base_class.pl
-lib/Config/Model/Itself.pm
-lib/Config/Model/Itself/BackendDetector.pm
-lib/Config/Model/Itself/TkEditUI.pm
-lib/Config/Model/models/Itself/CargoElement.pl
-lib/Config/Model/models/Itself/CargoWarpRule.pl
-lib/Config/Model/models/Itself/CargoWarpValue.pl
-lib/Config/Model/models/Itself/Class.pl
-lib/Config/Model/models/Itself/CommonElement.pl
-lib/Config/Model/models/Itself/ComputedValue.pl
-lib/Config/Model/models/Itself/Element.pl
-lib/Config/Model/models/Itself/MigratedValue.pl
-lib/Config/Model/models/Itself/Model.pl
-lib/Config/Model/models/Itself/NonWarpableElement.pl
-lib/Config/Model/models/Itself/WarpOnlyElement.pl
-lib/Config/Model/models/Itself/WarpRule.pl
-lib/Config/Model/models/Itself/WarpValue.pl
-lib/Config/Model/models/Itself/WarpableCargoElement.pl
-lib/Config/Model/models/Itself/WarpableElement.pl
-t/backend_detect.t
-t/dot_graph.t
-t/itself.t
-t/itself-editor.t
-t/list_itself_structure.t
-t/load_write_itself.t
-t/pod.t
