@@ -1,0 +1,28 @@
+name    = Config-Model-Itself
+version = 1.216
+author  = Dominique Dumont
+license = LGPL_2_1
+copyright_holder = Dominique Dumont
+copyright_year = 2010
+
+[Prereqs / RuntimeRequires]
+Config::Model    = 1.206
+Log::Log4perl   = 0
+Config::Model::TkUI = 1.210
+Pod::POM        = 0
+YAML::Any       = 0
+
+; avoid failures on CPAN smoke tests
+Tk              = 0
+
+[@Filter]
+bundle = @Classic
+remove = MakeMaker
+remove = PodCoverageTests
+remove = PodVersion
+remove = Readme
+
+[ModuleBuild::Custom]
+
+[Prepender]
+copyright=1
