@@ -1,5 +1,7 @@
-2010-04-10  Dominique Dumont  <domi.dumont@free.fr>
+2010-08-13  Dominique Dumont  <domi.dumont@free.fr> 1.216
 
+	* Added accept parameter in Itself/Class.pl 
+	(requires Config::Model 1.206)
 	* Build.PL: added dependency on Tk to avoid CPAN smoke test
 	failure
 
